--- a/main.html
+++ b/main.html
@@ -26,13 +26,17 @@
 				<td>2</td>
 				<td>John</td>
 			</tr>
+			<tr>
+				<td>3</td>
+				<td>Salman</td>
+			</tr>
 		</tbody>
 	</table>
 	<h2>List of medias</h2>
 	<ol>
 		<li><img src="https://picsum.photos/id/123/200/300" alt="water drops"></li>
 		<li><video controls></video><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></li>
-		<li><audio src="http://commondatastorage.googleapis. com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio></li>
+		<li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio></li>
 	</ol>
 
 </body>
